fix: prevent page overflow by decreasing sprite width and hover scale

--- a/src/components/Card/index.css
+++ b/src/components/Card/index.css
@@ -20,7 +20,7 @@
       border-width: 2px;
       box-shadow: var(--shadow-lighter);
 
-      transform: scale(1.125) translateY(-1rem);
+      transform: scale(1.0625) translateY(-1rem);
     }
   }
 
@@ -49,7 +49,8 @@
   }
 
   .sprite {
-    width: 100%;
+    /* BUG FIX: The player tap makes the loader icon overflow the page.*/
+    width: 95%;
   }
 
   .loader {
